[package]
authors = ["Remi van der Laan <rrm-remi@hotmail.com>"]
edition = "2018"
name = "b2d-core"
version = "0.1.0"

[dependencies]
base64 = "0.13.0"

macroquad = "0.3.0"

serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# All dependencies compile in release even in debug mode
[profile.dev.package.'*']
opt-level = 3
